Adicionado uma caixa de alerta com um aviso ao selecionar o tipo de mensagem satírica na página de pedidos; correção da posição do botão de enviar pedido na página de pedidos; removido a opção de download do vídeo no player de vídeo na página index

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
         <p class="lead">Assita ao vídeo e leia as informações abaixo para compreender melhor</p>
         
         <div class="player-wrapper">
-          <video id="player" controls crossorigin playsinline>
+          <video id="player"controls controlsList="nodownload">
             <source src="asset/videos/video_promocional.mp4" type="video/mp4" />
+            Seu navegador não suporta o elemento de vídeo.
           </video>
         </div>
       </div>
