--- a/pedidos.html
+++ b/pedidos.html
@@ -69,9 +69,12 @@
                     </div>
                     <div class="col-md-6 mt-3">
                         <label class="form-label text-magenta">Qual é o tipo de mensagem?</label>
-                        <select class="form-select" id="tipoMensagemEstilo">
-                            <option value="sim">Líricas (Amor no ar)</option>
-                            <option value="nao">Satíricas (Zueira total)</option>
+                        <div class="alert alert-danger" role="alert" style="display: none;" id="warningTextMenssage">
+                            ATENÇÃO: Caso a mensagem personalizada enviada seja demasiadamente ofensiva, não iremos enviar a mensagem original. Além disso, não há reembolso do valor após o pagamento.
+                        </div>
+                        <select class="form-select" id="tipoMensagemEstilo" onchange="toggleAttentionTypeMenssage()">
+                            <option value="sim">Lírica (Amor no ar)</option>
+                            <option value="nao">Satírica (Zueira total)</option>
                         </select>
                     </div>
                       <div class="col-md-6 mt-3">
@@ -88,7 +91,7 @@
                     <textarea class="form-control" id="mensagemPersonalizada" rows="4" placeholder='Ex: "Oi, amor! 💌 Só queria lembrar que te amo mais do que pizza (e olha que isso é sério). Se você aguentou meus dramas até aqui, parabéns: já ganhou o prêmio de melhor namorado(a) do mundo. Feliz Dia dos Namorados! PS: desculpa por roubar o cobertor toda noite. 😅"'></textarea>
                 </div>
                 <div class="col-12 text-center">
-                    <button type="button" class="btn btn-success btn-lg mt-5 btn-neon-whats" onclick="enviarWhats()">
+                    <button type="button" class="btn btn-success btn-lg my-5 btn-neon-whats" onclick="enviarWhats()">
                         Enviar via WhatsApp
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
                             class="bi bi-whatsapp" viewBox="0 0 16 16">
