Alteração no título da página de pedidos.html

--- a/pedidos.html
+++ b/pedidos.html
@@ -28,7 +28,7 @@
                 <div class="col d-flex flex-column">
                   <div class="d-flex align-items-center justify-content-center">
                     <img src="asset/images/icon_web.png" alt="logo-website" class="img-logo">
-                    <h1 class="fw-bold">Faça seu pedido</h1>
+                    <h1 class="fw-bold">Fazer meu pedido</h1>
                   </div>
                   <p class="lead">“Declare, zoe ou se queime — no amor e na vergonha, a gente entrega!”</p>
                 </div>
