Correção de alguns pequenos bugs; melhora no design do rodapé da página inicial index.html; acrescentado links de fale conosco e quem somos no rodapé; alteração em style.css adicionando mais classes e, adjacente a isso, melhorando consideravelmente os aspectos de aparência e funcionalidade de design da página.

--- a/pedidos.html
+++ b/pedidos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fazer o Pedido</title>
+    <title>Fazer um Pedido</title>
 
     <!--icon-->
     <link rel="shortcut icon" href="asset/images/icon_web.png" type="image/png">
@@ -28,9 +28,9 @@
                 <div class="col d-flex flex-column">
                   <div class="d-flex align-items-center justify-content-center">
                     <img src="asset/images/icon_web.png" alt="logo-website" class="img-logo">
-                    <h1 class="fw-bold">Fazer meu pedido</h1>
+                    <h1 class="fw-bold">Fazer um pedido</h1>
                   </div>
-                  <p class="lead">“Declare, zoe ou se queime — no amor e na vergonha, a gente entrega!”</p>
+                  <p class="lead">Está pronto para declarar seu amor pelo(a) amado(a) ou mandar uma zoeira para um(a) amigo(a)?</p>
                 </div>
         </div>
     </header>
