correção de alguns bugs no código de envio para planilha; adicão de um texto sobre o botão de enviar pedidos na página de pedidos.html; acrescentado funcionalidade de gerar um ID aleatório para identificação dos clientes

--- a/pedidos.html
+++ b/pedidos.html
@@ -88,6 +88,7 @@
                     <textarea class="form-control" name="mensagem" id="mensagemPersonalizada" rows="4" placeholder='Ex: "Oi, amor! 💌 Só queria lembrar que te amo mais do que pizza (e olha que isso é sério). Se você aguentou meus dramas até aqui, parabéns: já ganhou o prêmio de melhor namorado(a) do mundo. Feliz Dia dos Namorados! PS: desculpa por roubar o cobertor toda noite. 😅"'></textarea>
                 </div>
                 <div class="col-12 text-center">
+                    <p class="h6 text-secondary mt-3">Ao clicar no botão abaixo, você será redirecionado para o contato do WhatsApp de um dos nossos colaboradores. Já com o contato aberto no aplicativo do WhatsApp, apenas clique para enviar a mensagem com as informações preenchidas aqui no site. Assim que recebermos sua mensagem, iremos dar seguimento ao seu pedido.</p>
                     <button type="submit" class="btn btn-success btn-lg my-5 btn-neon-whats">
                         Enviar via WhatsApp
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
